evaluation/kubernetes/apps/prose-system/jaeger/jaeger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-query
spec:
  ingressClassName: nginx
  rules:
    - host: &host "jaeger-query.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: jaeger-query
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
